--- a/build.xml
+++ b/build.xml
@@ -83,7 +83,7 @@ To display the available targets type:
     <property name="Project"            value="Apache Batik" />
     <property name="project"            value="batik" />
     <property name="year"               value="2015" />
-    <property name="version"            value="1.8" />
+    <property name="version"            value="skio-1.8" />
     <property name="revisionType"       value="" />
     <property name="revisionNumber"     value="" />
     <property name="completeVersion"    value="${version}${revisionType}${revisionNumber}" />
